prima versione semiseria

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              marasconfusion
-bio:                'Bio cippirimerlo blablabla'
-description:        "Descrizione scusa marguati ciao"
+bio:                'Battute bellissime'
+description:        "Le battute più bellissime"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
